Fixes button issues on small screens

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -36,7 +36,7 @@
   }
 
   p {
-    @apply [&:not(:last-child)]:mb-5;
+    @apply mb-5;
   }
 
   small {
@@ -62,7 +62,7 @@
     @apply px-5 md:px-16
       mx-auto
       pb-12 md:pb-24
-      min-h-80vh
+      min-h-90vh
       xl:max-w-screen-2xl
       md:mb-40 xl:mb-60;
   }
@@ -77,7 +77,7 @@
   }
 
   .hero p {
-    @apply mb-20;
+    @apply mb-12 lg:mb-16;
   }
   /* Hero Area Ends */
 
@@ -85,26 +85,28 @@
     @apply no-underline relative bg-obsidian text-cream rounded-full w-full sm:w-auto text-center sm:text-left transition-colors duration-300 hover:bg-obsidian-600 hover:shadow-md-flat-r hover:shadow-obsidian;
   }
 
-  .button:hover {
-    @apply text-cream;
-  }
+  @media not all and (pointer: coarse) {
+    .button:hover {
+      @apply text-cream;
+    }
 
-  .button::before {
-    @apply absolute inset-0 rounded-full border-4 border-transparent transition-all duration-300;
-    content: "";
-  }
+    .button::before {
+      @apply absolute inset-0 rounded-full border-4 border-transparent transition-all duration-300;
+      content: "";
+    }
 
-  .button:hover::before {
-    @apply border-obsidian;
-  }
+    .button:hover::before {
+      @apply border-obsidian;
+    }
 
-  .button:hover,
-  .button {
-    transition: box-shadow 0.3s ease-in-out;
+    .button:hover,
+    .button {
+      transition: box-shadow 0.3s ease-in-out;
+    }
   }
 
   .button.button-large {
-    @apply text-lg font-medium px-10 py-4;
+    @apply sm:text-lg font-medium px-10 py-4;
   }
 
   .button.button-small {
@@ -238,7 +240,7 @@
   }
 
   .p-bigger {
-    @apply text-lg md:text-xl lg:text-2xl lg:leading-normal [&:not(:last-child)]:mb-6 md:[&:not(:last-child)]:mb-8 lg:[&:not(:last-child)]:mb-10;
+    @apply text-lg md:text-xl lg:text-2xl lg:leading-normal mb-6 md:mb-8 lg:mb-10;
   }
 
   .p-smaller {
@@ -247,5 +249,9 @@
 
   .disabled {
     @apply opacity-25;
+  }
+
+  .last-flat {
+    @apply last:mb-0;
   }
 }
